--- a/src/content/posts/自用代码.md
+++ b/src/content/posts/自用代码.md
@@ -1,13 +1,13 @@
 ---
 title: 自用代码
-published: 2025-12-13
+published: 2025-12-14
 tags: [Code, 自用, 个人]
 category: Code
 draft: false
 ---
 
 ## 自用代码
->一些在不同地方修改网页可能会用到的代码         
+>一些在不同地方修改网页可能会用到的代码   im a noob so 原谅我整点help      
 
 ##### 添加所有变更到暂存区
 ```bash
@@ -20,4 +20,8 @@ git commit -m '描述'
 ##### 推送到GitHub
 ```bash
 git push origin main
+```
+##### 从GitHub拉取更新
+```bash
+git pull origin main
 ```
